pkcs11-helper
Copyright (c) 2005-2017 Alon Bar-Lev <alon.barlev@gmail.com>

????-??-?? - Version 1.24


2018-06-02 - Version 1.23

 * build: cleanups.
 * openssl: rework support 1.1.

2017-02-12 - Version 1.22

 * spec: minor cleanups.

2017-01-06 - Version 1.21

 * mbedtls: fix missing logic if issur certificate, thanks to Steffan Karger

2016-12-08 - Version 1.20

 * polarssl: support polarssl-1.3, thanks to Steffan Karger.
 * certificate: ignore certificate object without CKA_ID.
 * openssl: fix memory leak, thanks to ASPj.
 * openssl: support 1.1 and libressl, thanks to Daiki Ueno.

2013-10-11 - Version 1.11

 * openssl: support generic pkey.
 * openssl: add dsa support.
 * openssl: add ecdsa support, thanks for Sanaullah for testing.

2012-02-29 - Version 1.10

 * PolarSSL crypto engine by Adriaan de Jong
 * build: --disable-crypto-engine-win32 renamed to --disable-crypto-engine-cryptoapi 
 * api: PKCS11H_FEATURE_MASK_ENGINE_CRYPTO_WIN32 renamed to
   PKCS11H_FEATURE_MASK_ENGINE_CRYPTO_CRYPTOAPI.
 * api: PKCS11H_ENGINE_CRYPTO_WIN32 renamed to
   PKCS11H_ENGINE_CRYPTO_CRYPTOAPI

2011-08-16 - Version 1.09

 * Do not retry if CKR_BUFFER_TOO_SMALL and none NULL target.
 * Fixup OpenSSL engine's rsa_priv_enc to use RSA size output buffer.

2011-02-23 - Version 1.08

 * Do not attempt to logout if uninitialized, thanks to Jan Just Keijser.
 * Use OpenSSL engine's rsa_priv_enc instead of rsa_sign, thanks to Markus
   Friedl.

2009-02-27 - Version 1.07

 * Minor Win64 fixup.

2008-07-31 - Version 1.06

 * Some MinGW build fixups.

 * Some BSD build fixups.

 * Fix some VC6 issues thanks to Justin Karneges.

 * Add version resource for Windows.

2007-10-12 - Version 1.05

 * Export pkcs11h_logout().

2007-10-05 - Version 1.04

 * Added NSS crypto enigne.

 * Added new slotevent mode (poll vs fetch).

 * Add more invalid characters to serialization string.

 * Fix openssl decrypt return code.

2007-06-13 - Version 1.03

 * Autoconf fixups.
